--- a/create.html
+++ b/create.html
@@ -26,4 +26,12 @@
         </span>
     </form>
             
+			
+			
+			
+			<md-input-container class="md-block">
+            <label>Question</label>
+            <input type="text" name="question" ng-model="create.faq.question" md-maxlength="150"/>
+        </md-input-container>
+			
 </md-content>
